--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -96,7 +96,7 @@
 
 <!-- show message if it was recently modified -->
 {% set lastchangeDiff = 'now'|date('U') - Entity.entityData.modified_at|date('U') %}
-{% if (lastchangeDiff < 600) and Entity.entityData.lastchangeby != Entity.Users.userData.userid %}
+{% if (lastchangeDiff < 600) and not Entity.entityData.lastchangeby is null and Entity.entityData.lastchangeby != Entity.Users.userData.userid %}
   {{ 'Warning: this entry was modified %s seconds ago by %s.'|trans|format(lastchangeDiff, lastModifierFullname)|msg('warning', false) }}
 {% endif %}
 
