--- a/src/templates/create-new.html
+++ b/src/templates/create-new.html
@@ -23,7 +23,7 @@
                 </a>
               {% endfor %}
             {% else %}
-            <h6 class='dropdown-header'>{{ 'No templates found'|trans }}</h6>
+            <h6 class='dropdown-header'>{{ 'No pinned templates found'|trans }}</h6>
             {% endif %}
             <div class='dropdown-divider'></div>
             <a href='ucp.php?tab=3' class='dropdown-item'>
