--- a/src/templates/show-templates-edit.html
+++ b/src/templates/show-templates-edit.html
@@ -1,4 +1,4 @@
-<div class='box'>
+<div class='box' style='min-height: 600px;'>
   <div class='row'>
     <div class='col'>
       <h3><i class='fas fa-layer-group'></i> {{ 'Experiments Templates'|trans }}</h3>
@@ -28,53 +28,66 @@
   {% include 'show-templates-select.html' %}
 
   {% if Entity.entityData %}
-<!-- MORE OPTIONS DROPDOWN MENU (···) -->
-<div class='d-flex'>
-  <!-- NAME OF TPL AND OWNER -->
-  <div class='mr-auto'>
-    <h2>
-      <!-- lock icon -->
-      {% if entityData.locked %}
-        <i class='fas fa-lock' style='color:#29AEB9'></i>
-      {% endif %}
-      {{ Entity.entityData.fullname|raw }} - {{ Entity.entityData.title|raw }}
-    </h2>
-  </div>
+  <div id='templatesDiv'>
+  <!-- MORE OPTIONS DROPDOWN MENU (···) -->
+  <div class='d-flex'>
+    <!-- NAME OF TPL AND OWNER -->
+    <div class='mr-auto'>
+      <h2>
+        <!-- lock icon -->
+        {% if entityData.locked %}
+          <i class='fas fa-lock fa-fw' style='color:#29AEB9'></i>
+        {% endif %}
+        {% if Entity.Pins.isPinned %}
+          <i id='toggle-pin-icon' class='fas fa-thumbtack fa-fw' style='color:#29AEB9'></i>
+        {% endif %}
+        {{ Entity.entityData.fullname|raw }} - {{ Entity.entityData.title|raw }}
+    </p>
+      </h2>
+    </div>
 
-  <!-- MORE OPTIONS MENU (...) -->
-  <div class='dropdown'>
-    <div data-toggle='dropdown' aria-haspopup='true' class='button-on-hover' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' role='button'>
-      <h3><i class='fas fa-ellipsis-v fa-2x'></i></h3>
-    </div>
-    <div class='dropdown-menu dropdown-menu-right' aria-label='{{ 'More options'|trans }}'>
-      {% if not Entity.entityData.locked %}
-        <!-- MANAGE PERMISSIONS -->
-        <a href='#' class='dropdown-item' data-action='toggle-modal' data-target='permModal' data-read='{{ Entity.entityData.canread }}' data-write='{{ Entity.entityData.canwrite }}'>
-          <i class='fas fa-share-alt fa-fw mr-1'></i>{{ 'Manage Permissions'|trans }}
+    <!-- MORE OPTIONS MENU (...) -->
+    <div class='dropdown'>
+      <div data-toggle='dropdown' aria-haspopup='true' class='button-on-hover' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' role='button'>
+        <i class='fas fa-ellipsis-v fa-2x'></i>
+      </div>
+      <div class='dropdown-menu dropdown-menu-right' aria-label='{{ 'More options'|trans }}'>
+        <!-- CREATE EXPERIMENT -->
+        <a data-action='create-entity' data-id="{{ Entity.id }}" href='#' class='dropdown-item'>
+          <i class='fas fa-circle-plus fa-fw mr-1'></i>{{ 'Create experiment from template'|trans }}
         </a>
-      {% endif %}
-      <!-- LOCK -->
-      <a data-action='lock-template' data-id="{{ Entity.id }}" href='#' class='dropdown-item'>
-        <i class='fas fa-lock fa-fw mr-1'></i>{{ 'Lock/Unlock item'|trans }}
-      </a>
-      <!-- DOWNLOAD -->
-      <a href='#' class='dropdown-item' data-action='download-template' data-id='{{ Entity.id }}'>
-        <i class='fas fa-download fa-fw mr-1'></i>{{ 'Download template'|trans }}
-      </a>
-      <!-- REVISIONS -->
-      {% if revNum > 0 %}
-      <a class='dropdown-item' href='revisions.php?type={{ Entity.type }}&item_id={{ Entity.id }}'><i class='fas fa-history fa-fw'></i> {{ revNum }} {% trans %}revision available{% plural revNum %}revisions available{% endtrans %}</a>
-      {% endif %}
-      {% if not Entity.entityData.locked %}
-        <!-- DESTROY -->
-        <div class='dropdown-divider'></div>
-        <a href='#' data-action='destroy-template' class='dropdown-item hover-danger' data-id='{{ Entity.id }}'>
-          <i class='fas fa-trash-alt fa-fw mr-1'></i>{{ 'Destroy template'|trans }}
+        {% if not Entity.entityData.locked %}
+          <!-- MANAGE PERMISSIONS -->
+          <a href='#' class='dropdown-item' data-action='toggle-modal' data-target='permModal' data-read='{{ Entity.entityData.canread }}' data-write='{{ Entity.entityData.canwrite }}'>
+            <i class='fas fa-share-alt fa-fw mr-1'></i>{{ 'Manage Permissions'|trans }}
+          </a>
+        {% endif %}
+        <!-- PIN -->
+        <a data-action='pin' data-id='{{ Entity.id }}' href='#' class='dropdown-item'>
+          <i class='fas fa-thumbtack fa-fw mr-1'></i>{{ 'Toggle pin'|trans }}
         </a>
-      {% endif %}
+        <!-- LOCK -->
+        <a data-action='toggle-lock' data-id="{{ Entity.id }}" href='#' class='dropdown-item'>
+          <i class='fas fa-lock fa-fw mr-1'></i>{{ 'Lock/Unlock item'|trans }}
+        </a>
+        <!-- DOWNLOAD -->
+        <a href='#' class='dropdown-item' data-action='download-template' data-id='{{ Entity.id }}'>
+          <i class='fas fa-download fa-fw mr-1'></i>{{ 'Download template'|trans }}
+        </a>
+        <!-- REVISIONS -->
+        {% if revNum > 0 %}
+        <a class='dropdown-item' href='revisions.php?type={{ Entity.type }}&item_id={{ Entity.id }}'><i class='fas fa-history fa-fw'></i> {{ revNum }} {% trans %}revision available{% plural revNum %}revisions available{% endtrans %}</a>
+        {% endif %}
+        {% if not Entity.entityData.locked %}
+          <!-- DESTROY -->
+          <div class='dropdown-divider'></div>
+          <a href='#' data-action='destroy-template' class='dropdown-item hover-danger' data-id='{{ Entity.id }}'>
+            <i class='fas fa-trash-alt fa-fw mr-1'></i>{{ 'Destroy template'|trans }}
+          </a>
+        {% endif %}
+      </div>
     </div>
-  </div>
-  </div>
+    </div>
 
 
     {% if Entity.entityData.locked %}
@@ -84,5 +97,6 @@
     {% endif %}
 
   {% endif %}
+  </div>
   </div>
   <div id='info' data-page='template-edit' data-type='experiments_templates' data-id='{{ Entity.id }}'></div>
