--- a/src/templates/show-view-edit.html
+++ b/src/templates/show-view-edit.html
@@ -23,15 +23,17 @@
   <div class='modal-dialog' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
-        <h5 class='modal-title' id='importModalLabel'>{{ 'Import from archive'|trans }}</h5>
+        <h5 class='modal-title' id='importModalLabel'>{{ 'Import from file'|trans }}</h5>
         <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
       <div class='modal-body'>
+        <p>{{ 'You can import data from a .eln archive, a .zip archive (created by eLabFTW) or a .csv file. %sSee documentation %s%s.'|trans|format("<a href='https://doc.elabftw.net/user-guide.html#importing-data' target='_blank'>", "<i class='fas fa-arrow-up-right-from-square'></i>", '</a>')|raw }}</p>
         <form class='form-group' enctype='multipart/form-data' action='app/controllers/ImportController.php' method='post'>
-          <label for='target_zip'>{{ '1. Select where to import:'|trans }}</label>
-          <select class='form-control' id='target_zip' autocomplete='off' name='target'>
+          {{ App.Session.get('csrf')|csrf }}
+          <label for='import_modal_target'>{{ '1. Select where to import:'|trans }}</label>
+          <select class='form-control' id='import_modal_target' autocomplete='off' name='target'>
             <option selected disabled>-------</option>
             <option disabled>{{ 'Import in database'|trans }}</option>
             {% for itemsType in itemsCategoryArr %}
@@ -44,8 +46,8 @@
             {% endfor %}
           </select>
 
-          <label for='visibility_zip'>{{ '2. Select a visibility:'|trans }}</label>
-          <select class='form-control' id='visibility_zip' autocomplete='off' name='canread'>
+          <label for='import_modal_canread'>{{ '2. Select a visibility:'|trans }}</label>
+          <select class='form-control' id='import_modal_canread' autocomplete='off' name='canread'>
             {% for key, value in visibilityArr %}
               <option value='{{ key }}'
               {{ 'team' == key ? ' selected' }}
@@ -53,8 +55,8 @@
               {% endfor %}
           </select>
 
-          <label for='canwrite_zip'>{{ '2b. Select write access:'|trans }}</label>
-          <select class='form-control' id='canwrite_zip' autocomplete='off' name='canwrite'>
+          <label for='import_modal_canwrite'>{{ '2b. Select write access:'|trans }}</label>
+          <select class='form-control' id='import_modal_canwrite' autocomplete='off' name='canwrite'>
             {% for key, value in visibilityArr %}
               <option value='{{ key }}'
               {{ 'team' == key ? ' selected' }}
@@ -62,11 +64,10 @@
             {% endfor %}
           </select>
 
-          {{ App.Session.get('csrf')|csrf }}
-          <label class='d-block' for='archiveuploader'>{{ '3. Select a file to import:'|trans }}</label>
-          <input id='archiveuploader' required name='file' type='file' accept='.zip,.eln' />
+          <label class='d-block' for='import_modal_file_input'>{{ '3. Select a file to import:'|trans }}</label>
+          <input id='import_modal_file_input' required name='file' type='file' accept='.eln,.zip,.csv' />
           <input name='type' type='hidden' value='archive' />
-          <span class='smallgray'>{{ 'Allowed extensions: .eln, .zip'|trans }}</span>
+          <span class='smallgray'>{{ 'Allowed extensions: .eln, .zip, .csv'|trans }}</span>
 
           <div class='mt-4 text-center'>
             <button type='submit' class='button btn btn-primary'>{{ 'Import'|trans }}</button>
