allow importing ELN files and other changes to templates and interface (#3704)
* the `lastchange` column is renamed `modified_at` to align with `created_at`
* the import (zip/eln) modal is available to users from the create menu from experiments or items (show/view/edit modes)
* templates no longer show in the experiments' page create menu submenu (arrow on left), only the pinned ones do
* the `Pins` class now handles experiments, items and templates
* the `pin2users` table has been split for the different entities in different tables, this removes the `type` column and now we also use composite primary keys
* `ImportController` class is created to get a response from an import request, it handles csv, zip and eln file imports
* `ImportInterface` is created with `import()` and `getInserted()` functions
* `datetime` column of Comments is renamed to `created_at`
* a negative template value (`-1`) means: create an completely empty entity, not even default experiments template in there
* `getPinned()` of `Pins` is renamed `readAll()`
* tags autocomplete is limited to 20 entries
* templates can be exported and imported in .eln format. Old .tpl format (only title and body goes through the window) fix #3585 
* add a helper function in `Users`: `isAdminOf()` to figure out if we have write access to that user as an Admin
* add `ImportEln` to read `.eln` archive files into experiments, items or templates
* bring some fixes to `MakeEln` too: links are in `mentions`, steps are imported from `elabftw-export.json` file, csv and pdf are no longer exported as files (saves a lot of processing/memory to avoid pdf generation in archives), comments are in comments property, tags are in keywords, see: https://github.com/TheELNConsortium/TheELNFileFormat/blob/master/examples/elabftw/README.md#concepts-used
* improve the templates lock/pin UX/UI
* remove import from Admin Panel, now every user is able to import stuff
* remove default template entry in create new submenu (

--- a/src/templates/create-new.html
+++ b/src/templates/create-new.html
@@ -8,25 +8,18 @@
         </button>
         <div class='dropdown-menu' aria-label='{{ 'Create new'|trans }}'>
           {% if Entity.type == 'experiments' %}
-            <a href='#' data-action='create-entity' data-tplid='0' class='dropdown-item'>
-              {% trans %}
-              Experiment
-              {% plural 1 %}
-              Experiments
-              {% endtrans %}
-            </a>
-            <div class='dropdown-divider'></div>
             {% if templatesArr|length > 0 %}
+              <h6 class='dropdown-header'>{{ 'Experiments templates'|trans }}</h6>
               {% for tpl in templatesArr %}
                 <a href='#' data-action='create-entity' data-tplid='{{ tpl.id }}' class='dropdown-item'>
                   {{ tpl.title|raw }}
                 </a>
               {% endfor %}
             {% else %}
-            <h6 class='dropdown-header'>{{ 'No templates found'|trans }}</h6>
+              <h6 class='dropdown-header'>{{ 'No pinned templates found'|trans }}</h6>
             {% endif %}
             <div class='dropdown-divider'></div>
-            <a href='ucp.php?tab=3' class='dropdown-item'>
+            <a href='ucp.php?tab=3' class='dropdown-item'><i class='fas fa-layer-group'></i>
               {{ 'Manage templates'|trans }}
             </a>
           {% else %}
@@ -36,6 +29,10 @@
               </a>
             {% endfor %}
           {% endif %}
+          <div class='dropdown-divider'></div>
+          <div class='dropdown-item' data-action='import-file'>
+            <i class='fas fa-upload'></i> {{ 'Import from file'|trans }}
+          </div>
         </div>
       </div>
       <button type='button' data-action='create-entity' data-tplid='0' class='btn btn-primary'>{{ 'Create'|trans }}</button>
