--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -207,7 +207,7 @@
   <div class='row'>
     <div class='col-6'>
       <!-- SHOW LAST MOD -->
-      <p>{{ 'Last modified on %s'|trans|format(Entity.entityData.lastchange) }}</p>
+      <p>{{ 'Last modified on %s'|trans|format(Entity.entityData.modified_at) }}</p>
     </div>
     <div class='col-6'>
       <!-- eLabID -->
@@ -232,9 +232,12 @@
       <h3><i class='fas fa-comments' class='d-inline'></i> {{ 'Comments'|trans }}</h3>
         {% for comment in Entity.entityData.comments %}
           <div class='box'>
-            <div class='comment-header p-2'>
-              <span class='text-muted'>{{ comment.fullname|raw }} {{ 'commented'|trans }}</span>
-              <span title='{{ comment.datetime }}' class='text-muted relative-moment'></span>
+            <div class='comment-header text-muted p-2'>
+              {{ comment.fullname|raw }} {{ 'commented'|trans }}
+              <span title='{{ comment.created_at }}' class='relative-moment'></span>
+              {% if comment.created_at != comment.modified_at %}
+                ({{ 'edited'|trans }} <span title='{{ comment.modified_at }}' class='relative-moment'></span>)
+              {% endif %}
               {% if comment.userid == Entity.Users.userData.userid %}
                 <a class='float-right' data-action='destroy-comment' data-target='{{ comment.id }}' title='{{ 'Delete'|trans }}'>
                     <i class='fas fa-trash-alt fa-lg'></i>
