add new dropdown menu on top right
shamelessly copied from gitlab
* add new support_url config option

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -16,7 +16,7 @@
     </a>
 
     <a class='elab-tooltip-top' style='color:#343434' href='https://github.com/elabftw/elabftw/issues/new/choose'>
-      <span>{{ 'Report a bug'|trans }}</span>
+      <span>{{ 'Submit feedback'|trans }}</span>
         <i title='Report bug' class='fas fa-bug fa-lg'></i>
     </a>
 
