add toggle body action to links

--- a/src/templates/show-item.html
+++ b/src/templates/show-item.html
@@ -41,7 +41,7 @@
               {% endif %}
               <!-- toggle body -->
               <span data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
-                <i class='fas fa-plus-circle link-like'></i>
+                <i class='fas fa-plus-circle'></i>
               </span>
               <!-- category -->
               <span class='item-category'><a style='color:#{{ item.color }}' href='?cat={{ item.category_id }}'>{{ item.category }}</a></span>
