--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -104,24 +104,32 @@
               {% if Entity.entityData.links %}
               <ul class='list-group'>
                   {% for link in Entity.entityData.links %}
-                  <li class='list-group-item'>
-                    <div class='float-right ml-1'>
-                      {% if mode != 'edit-template' %}
-                        <a data-action='import-links' data-target='{{ link.itemid }}' title='{{ 'Import links'|trans }}'>
-                          <i class='fas fa-arrows-down-to-line'></i>
+                    {% set randomId = random() %}
+                    <li class='list-group-item' id='parent_{{ randomId }}'>
+                      <div class='float-right ml-1'>
+                        <!-- toggle body -->
+                        <span data-type='items' data-id='{{ link.itemid }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
+                          <i class='fas fa-plus-circle'></i>
+                        </span>
+                        {% if mode != 'edit-template' %}
+                          <a data-action='import-links' data-target='{{ link.itemid }}' title='{{ 'Import links'|trans }}'>
+                            <i class='fas fa-arrows-down-to-line'></i>
+                          </a>
+                          <a data-action='import-link-body' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}'>
+                            <i class='fas fa-lg fa-file-import'></i>
+                          </a>
+                        {% endif %}
+                        <a data-action='destroy-link' data-target='{{ link.itemid }}' title='{{ 'Delete'|trans }}'>
+                          <i class='fas fa-lg fa-trash-alt'></i>
                         </a>
-                        <a data-action='import-link-body' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}'>
-                          <i class='fas fa-lg fa-file-import'></i>
-                        </a>
-                      {% endif %}
-                      <a data-action='destroy-link' data-target='{{ link.itemid }}' title='{{ 'Delete'|trans }}'>
-                        <i class='fas fa-lg fa-trash-alt'></i>
-                      </a>
-                    </div>
-                    <i class='fas fa-link mr-1'></i>
-                    <span class='item-category' style='color:#{{ link.color|raw }}'>{{ link.name|raw }}</span> - <a href='database.php?mode=view&id={{ link.itemid }}'>
-                    {{ link.title|raw }}</a>
-                  </li>
+                      </div>
+                      <i class='fas fa-link mr-1'></i>
+                      <span class='item-category' style='color:#{{ link.color|raw }}'>{{ link.name|raw }}</span> - <a href='database.php?mode=view&id={{ link.itemid }}'>
+                      {{ link.title|raw }}</a>
+                      <!-- container to hold the body of the entity if it is toggled with the +/- icon -->
+                      <!-- a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well -->
+                      <div hidden id='{{ randomId }}' style='overflow:auto;margin: 10px 0 0 20px'></div>
+                    </li>
                   {% endfor %}
               </ul>
               {% endif %}
